--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
     "framer-motion": "^6.3.15",
     "next": "latest",
     "react": "^17.0.2",
@@ -13,6 +14,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
+    "babel-plugin-styled-components": "^2.0.7",
     "typescript": "^4.7.4"
   },
   "scripts": {
