--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "nodemailer": "^6.7.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.33.0",
     "react-icons": "^4.4.0",
+    "react-toastify": "^9.0.5",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
