--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.10",
     "@types/node": "^18.0.0",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "^18.0.14",
