--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "private": true,
-  "dependencies": {
-    "axios": "^0.27.2",
-    "framer-motion": "^6.3.15",
-    "googleapis": "^104.0.0",
-    "next": "latest",
-    "nodemailer": "^6.7.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.33.0",
-    "react-icons": "^4.4.0",
-    "react-toastify": "^9.0.5",
-    "styled-components": "^5.3.5"
-  },
-  "devDependencies": {
-    "@types/gtag.js": "^0.0.10",
-    "@types/node": "^18.0.0",
-    "@types/nodemailer": "^6.4.4",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@types/styled-components": "^5.1.25",
-    "babel-plugin-styled-components": "^2.0.7",
-    "typescript": "^4.7.4"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  }
+	"private": true,
+	"dependencies": {
+		"axios": "^0.27.2",
+		"framer-motion": "^6.3.15",
+		"googleapis": "^104.0.0",
+		"lottie-react": "^2.3.1",
+		"next": "latest",
+		"nodemailer": "^6.7.5",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-hook-form": "^7.33.0",
+		"react-icons": "^4.4.0",
+		"react-toastify": "^9.0.5",
+		"react-tsparticles": "^2.1.0",
+		"styled-components": "^5.3.5",
+		"tsparticles": "^2.1.0"
+	},
+	"devDependencies": {
+		"@types/gtag.js": "^0.0.10",
+		"@types/node": "^18.0.0",
+		"@types/nodemailer": "^6.4.4",
+		"@types/react": "^18.0.14",
+		"@types/react-dom": "^18.0.5",
+		"@types/styled-components": "^5.1.25",
+		"babel-plugin-styled-components": "^2.0.7",
+		"typescript": "^4.7.4"
+	},
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	}
 }
