--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"framer-motion": "^6.3.15",
 		"googleapis": "^104.0.0",
 		"lottie-react": "^2.3.1",
+		"moment": "^2.29.3",
 		"next": "latest",
 		"nodemailer": "^6.7.5",
 		"react": "^17.0.2",
