--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,9 +33,12 @@
 	},
 	"include": [
 		"next-env.d.ts",
+		"global.d.ts",
+		"./global.d.ts",
+		"*.d.ts",
+		"**/*.d.ts",
 		"**/*.ts",
-		"**/*.tsx",
-		"src/styles/home.styles.tss"
+		"**/*.tsx"
 	],
 	"exclude": [
 		"node_modules"
