--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
 		"@types/react": "^18.0.14",
 		"@types/react-dom": "^18.0.5",
 		"@types/styled-components": "^5.1.25",
+		"autoprefixer": "^10.4.7",
 		"babel-plugin-styled-components": "^2.0.7",
+		"postcss": "^8.4.14",
+		"tailwindcss": "^3.1.4",
 		"typescript": "^4.7.4"
 	},
 	"scripts": {
