--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"tsparticles": "^2.1.0"
 	},
 	"devDependencies": {
+		"@svgr/webpack": "^6.2.1",
 		"@types/gtag.js": "^0.0.10",
 		"@types/node": "^18.0.0",
 		"@types/nodemailer": "^6.4.4",
