--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"lottie-react": "^2.3.1",
 		"moment": "^2.29.3",
 		"next": "latest",
+		"next-seo": "^5.4.0",
 		"nodemailer": "^6.7.5",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
